--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ajs-homeworks-unit-tests-game",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "jest --coverage",
     "start": "webpack-dev-server --mode development",
